# bluetui

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Makefile  NOTICE.md  REUSE.toml  Readme.md  SKILL.md  clippy.toml  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yaml
crates/beacon/: Cargo.toml  build.rs
crates/beacon/src/: main.rs
crates/beacon/ui/: app.slint
crates/bluetui-core/: Cargo.toml
crates/bluetui-core/src/: bluetooth.rs  bluetooth_query.rs  favorite.rs  lib.rs  palette.rs
doc/: bluetui.texi
packaging/: PKGBUILD  default.nix  guix.scm
src/: agent.rs  alias.rs  app.rs  bluetooth.rs  bluetooth_query.rs  cli.rs  commands.rs  config.rs  dto.rs  error.rs  event.rs  favorite.rs  handler.rs  help.rs  lib.rs  main.rs  notification.rs  output.rs  requests.rs  rfkill.rs  spinner.rs  string_ref.rs  text_edit.rs  theme.rs  time.rs  tui.rs  ui.rs
src/requests/: confirmation.rs  display_passkey.rs  display_pin_code.rs  enter_passkey.rs  enter_pin_code.rs
src/snapshots/: bluetui__help__tests__EnterPasskey-120.snap  bluetui__help__tests__EnterPasskey-80.snap  bluetui__help__tests__EnterPasskey-81.snap  bluetui__help__tests__EnterPinCode-121.snap  bluetui__help__tests__SetDeviceAliasBox-120.snap  bluetui__help__tests__SetDeviceAliasBox-121.snap  bluetui__help__tests__SetDeviceAliasBox-80.snap  bluetui__help__tests__SetDeviceAliasBox-81.snap
tests/: cli.rs
