# SPDX-FileCopyrightText: 2024 Badr Badri <contact@pythops.com>
# SPDX-FileCopyrightText: 2026 Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>
# SPDX-License-Identifier: GPL-3.0-only

[workspace]
resolver = "2"
members = ["crates/bluetui-core", "crates/beacon"]

[workspace.package]
authors = [
    "Badr Badri <contact@pythops.com>",
    "Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>",
]
license = "GPL-3.0-only"
edition = "2024"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
uninlined_format_args.level = "allow"
trivially_copy_pass_by_ref.level = "deny"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
must_use_candidate = "allow"

[package]
name = "bluetui"
version = "0.8.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "TUI for managing bluetooth on Linux"
readme = "Readme.md"
homepage = "https://github.com/pythops/bluetui"
repository = "https://github.com/pythops/bluetui"

[dependencies]
bluetui-core = { path = "crates/bluetui-core" }
async-channel = "2"
bluer = { version = "0.17", features = ["bluetoothd"] }
crossterm = { version = "0.29", default-features = false, features = [
    "event-stream",
] }
futures = "0.3"
ratatui = "0.30"
tokio = { version = "1", features = ["macros", "rt", "time"] }
dirs = "6"
toml = "0.9"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
tui-input = "0.15"
anyhow = "1"
libdbus-sys = { version = "0.2", features = ["vendored"] }
serde_json = "1"
jiff = "0.2"

[dev-dependencies]
insta = "1"
rstest = "0.26"

[profile.release]
strip = true
codegen-units = 1
lto = "fat"
opt-level = 3

[lints]
workspace = true
